drop 'test' block from build.gradle: not required with latest gradle-intellij-plugin