@@ -79,13 +79,6 @@ sourceSets {
     }
 }
 
-test {
-    maxHeapSize = '512m'
-    minHeapSize = '256m'
-    enableAssertions = true
-    jvmArgs '-XX:MaxPermSize=250m', '-Didea.system.path=system-test', '-Didea.config.path=config-test'
-}
-
 task wrapper(type: Wrapper) {
     gradleVersion = '2.5'
 }
